server/packages/sandbox-agent/tests/snapshots/http_sse_snapshots__api_endpoints_snapshots@agents_list_global.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
expression: normalize_agent_list(&agents)
---
agents:
  - id: amp
  - id: claude
  - id: codex
  - id: mock
  - id: opencode
