server/packages/sandbox-agent/tests/snapshots/http_sse_snapshots__approval_flow_snapshots@permission_events_codex.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
expression: normalize_events(&permission_events)
---
- metadata: true
  seq: 1
  session: started
  source: daemon
  synthetic: true
  type: session.started
- metadata: true
  seq: 2
  session: started
  source: agent
  synthetic: false
  type: session.started
- item:
    content_types:
      - status
    kind: status
    role: system
    status: completed
  seq: 3
  source: agent
  synthetic: false
  type: item.completed
- item:
    content_types:
      - text
    kind: message
    role: user
    status: in_progress
  seq: 4
  source: agent
  synthetic: false
  type: item.started
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 5
  source: daemon
  synthetic: true
  type: item.delta
- item:
    content_types:
      - text
    kind: message
    role: user
    status: completed
  seq: 6
  source: agent
  synthetic: false
  type: item.completed
- item:
    content_types: []
    kind: message
    role: assistant
    status: in_progress
  seq: 7
  source: agent
  synthetic: false
  type: item.started
- item:
    content_types:
      - status
    kind: status
    role: system
    status: completed
  seq: 8
  source: agent
  synthetic: false
  type: item.completed
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 9
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 10
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 11
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 12
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 13
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 14
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 15
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 16
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 17
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 18
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 19
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 20
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 21
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 22
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 23
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 24
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 25
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 26
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 27
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 28
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 29
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 30
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 31
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 32
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 33
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 34
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 35
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 36
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 37
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 38
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 39
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 40
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 41
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 42
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 43
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 44
  source: agent
  synthetic: false
  type: item.delta
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 45
  source: agent
  synthetic: false
  type: item.delta
- item:
    content_types:
      - reasoning
    kind: message
    role: assistant
    status: completed
  seq: 46
  source: agent
  synthetic: false
  type: item.completed
