server/packages/sandbox-agent/tests/snapshots/http_sse_snapshots__auth_snapshots@auth_valid_token_global.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
expression: "json!({\n    \"status\": status.as_u16(), \"payload\": normalize_agent_list(&payload),\n})"
---
payload:
  agents:
    - id: amp
    - id: claude
    - id: codex
    - id: mock
    - id: opencode
status: 200
