server/packages/sandbox-agent/tests/snapshots/http_sse_snapshots__run_concurrency_snapshot@concurrency_events_codex.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
expression: snapshot
---
session_a:
  - metadata: true
    seq: 1
    session: started
    source: daemon
    synthetic: true
    type: session.started
  - item:
      content_types:
        - status
      kind: status
      role: system
      status: completed
    seq: 2
    source: agent
    synthetic: false
    type: item.completed
  - item:
      content_types:
        - text
      kind: message
      role: user
      status: in_progress
    seq: 3
    source: agent
    synthetic: false
    type: item.started
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 4
    source: daemon
    synthetic: true
    type: item.delta
  - item:
      content_types:
        - text
      kind: message
      role: user
      status: completed
    seq: 5
    source: agent
    synthetic: false
    type: item.completed
  - item:
      content_types: []
      kind: message
      role: assistant
      status: in_progress
    seq: 6
    source: agent
    synthetic: false
    type: item.started
  - item:
      content_types:
        - status
      kind: status
      role: system
      status: completed
    seq: 7
    source: agent
    synthetic: false
    type: item.completed
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 8
    source: agent
    synthetic: false
    type: item.delta
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 9
    source: agent
    synthetic: false
    type: item.delta
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 10
    source: agent
    synthetic: false
    type: item.delta
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 11
    source: agent
    synthetic: false
    type: item.delta
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 12
    source: agent
    synthetic: false
    type: item.delta
  - item:
      content_types:
        - reasoning
      kind: message
      role: assistant
      status: completed
    seq: 13
    source: agent
    synthetic: false
    type: item.completed
session_b:
  - metadata: true
    seq: 1
    session: started
    source: daemon
    synthetic: true
    type: session.started
  - item:
      content_types:
        - status
      kind: status
      role: system
      status: completed
    seq: 2
    source: agent
    synthetic: false
    type: item.completed
  - item:
      content_types:
        - text
      kind: message
      role: user
      status: in_progress
    seq: 3
    source: agent
    synthetic: false
    type: item.started
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 4
    source: daemon
    synthetic: true
    type: item.delta
  - item:
      content_types:
        - text
      kind: message
      role: user
      status: completed
    seq: 5
    source: agent
    synthetic: false
    type: item.completed
  - item:
      content_types: []
      kind: message
      role: assistant
      status: in_progress
    seq: 6
    source: agent
    synthetic: false
    type: item.started
  - item:
      content_types:
        - status
      kind: status
      role: system
      status: completed
    seq: 7
    source: agent
    synthetic: false
    type: item.completed
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 8
    source: agent
    synthetic: false
    type: item.delta
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 9
    source: agent
    synthetic: false
    type: item.delta
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 10
    source: agent
    synthetic: false
    type: item.delta
  - delta:
      delta: "<redacted>"
      item_id: "<redacted>"
      native_item_id: "<redacted>"
    seq: 11
    source: agent
    synthetic: false
    type: item.delta
  - item:
      content_types:
        - reasoning
      kind: message
      role: assistant
      status: completed
    seq: 12
    source: agent
    synthetic: false
    type: item.completed
